--- a/test/rpi.ipynb
+++ b/test/rpi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +117,40 @@
     "                       json=j)\n",
     "print(r_post.json())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests, csv\n",
+    "try:\n",
+    "    resp = requests.get('https://od.cdc.gov.tw/eic/covid19/covid19_tw_stats.csv')\n",
+    "except:\n",
+    "    # dispatcher.utter_message(text='目前無法取得資訊')\n",
+    "    print('目前無法取得資訊')\n",
+    "else:\n",
+    "    utf8_content = resp.content.decode('utf-8')\n",
+    "    data = list(csv.DictReader(utf8_content.splitlines(), delimiter=','))[0]\n",
+    "    # dispatcher.utter_message(text=f\"總確診數：{data['確診']}\\n總死亡數：{data['死亡']}\\n總送驗數：{data['送驗']}\\n總排除數：{data['排除']}\\n昨日確診數：{data['昨日確診']}\\n昨日排除數：{data['昨日排除']}\\n昨日送驗數：{data['昨日送驗']}\")\n",
+    "    print(f\"總確診數：{data['確診']}\",\n",
+    "          f\"總死亡數：{data['死亡']}\",\n",
+    "          f\"總送驗數：{data['送驗']}\",\n",
+    "          f\"總排除數：{data['排除']}\",\n",
+    "          f\"昨日確診數：{data['昨日確診']}\",\n",
+    "          f\"昨日排除數：{data['昨日排除']}\",\n",
+    "          f\"昨日送驗數：{data['昨日送驗']}\",\n",
+    "          sep='\\n',\n",
+    "          end='')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
